# waterfall-logging

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/actions/: setup_poetry.yml
.github/actions/setup_poetry/: action.yml
.github/workflows/: dependencies_tests_pre_commit.yml  docs-build-publish.yml  docs_build_publish.yml  poetry-tests-pre-commit.yml  publish_package.yml  pull_request_main.yml  pull_request_master.yml  python-poetry.yml  setup_poetry.yml
docs/: explanation.md  how-to-guides.md  index.md  references.md  tutorials.md
docs/explanations/: context_manager.md  decorator.md
docs/how-to-guides/: base_class.md  context_manager.md  waterfall.md
docs/reference/: context_manager.md  decorator.md  log.md
docs/tutorials/: context_manager.md  decorator.md  pandas.md  pyspark.md
explanations/context_manager/: index.html
explanations/decorator/: index.html
explanations/log/: index.html
how-to-guides/base_class/: index.html
how-to-guides/waterfall/: index.html
output/tests/: california_housing.md  read_markdown_table.md
references/: index.html
search/: search_index.json
src/: __init__.py
src/waterfall_logging/: context_manager.py  decorator.py  log.py  utils.py
tests/: conftest.py  test_context_manager.py  test_decorator.py  test_log.py  test_performance.py  test_utils.py
tutorials/context_manager/: index.html
tutorials/decorator/: index.html
tutorials/pandas/: index.html
tutorials/pyspark/: index.html
(+1 files in other folders)
